Closed Bug 739537 Opened 14 years ago Closed 14 years ago

Leading spaces in selection not exported to clipboard upon copy

Categories

(Core :: DOM: Serializers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: hsivonen, Assigned: hsivonen)

References

(Regressed 1 open bug)

Details

Attachments

(1 file)

Steps to reproduce: 1) On any Web page, locate a word that has spaces before and after. 2) Select the space before, the word and the space after. 3) Press ctrl-c (cmd-c on Mac) 4) Switch to a plain text editor app (e.g. gedit on Linux; don't switch to a word processor that support styling) 5) Type two letters (e.g. "AB") in the text editor. 6) Move the caret between the two letters. 7) Press ctrl-v (cmd-v on Mac) Actual results: The word and the trailing space are pasted. The leading space is not pasted. Expected results: Expected all the text in the original selection--including the leading space--to be pasted.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Note that bug 564737 was about mailnews message conversions and the effect on clipboard export was just collateral damage. The duplicates of bug 564737 are about mailnews message conversion, too.
Attachment #609649 - Flags: review?(bugs)
Comment on attachment 609649 [details] [diff] [review] Get rid of the quirk Ok, let's try this then.
Attachment #609649 - Flags: review?(bugs) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla14
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Regressions: 1917449
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: