Bug 739537 - No longer drop leading space from the plain text clipboard flavor when exporting both HTML and plain text to clipboard. r=smaug.